@@ -7,9 +7,12 @@ import com.MedilaboSolutions.note.mapper.NoteMapper;
 import com.MedilaboSolutions.note.repository.NoteRepository;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.Pageable;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Slf4j
 @RequiredArgsConstructor
@@ -19,12 +22,16 @@ public class NoteService {
     private final NoteRepository noteRepository;
     private final NoteMapper noteMapper;
 
-    public List<NoteDto> findByPatientId(Long patId) {
-        List<Note> notes = noteRepository.findByPatId(patId);
+    public Page<NoteDto> findByPatientId(Long patId, Pageable pageable) {
+        Page<Note> notes = noteRepository.findByPatId(patId, pageable);
+        return notes.map(noteMapper::toNoteDto);
+    }
 
-        return notes.stream()
+    public List<NoteDto> findAllByPatientId(Long patId) {
+        return noteRepository.findByPatId(patId)
+                .stream()
                 .map(noteMapper::toNoteDto)
-                .toList();
+                .collect(Collectors.toList());
     }
 
     public NoteDto create(NoteRequestDto noteDto) {
